# wordz

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.sh  test_wordz.py  wordz.py
tests/: test.sh  test_lib.py
wordz/: cli.py  libwordz.py
