[project]
name = "wordz"
version = "0.0.1"
authors = [
  { name="L. Grobol", email="lgrobol@parisnanterre.fr" },
]
description = "Truc"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "regex",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/LoicGrobol/wordz"
Issues = "https://github.com/LoicGrobol/wordz"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wordz"]

[project.scripts]
wordz = "wordz.cli:main"